kubernetes/main/apps/monitoring/thanos/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.18b.haus/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thanos-query-frontend
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: thanos.png
    gethomepage.dev/name: Thanos
    gethomepage.dev/pod-selector: app.kubernetes.io/instance=thanos,app.kubernetes.io/component=query-frontend
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - thanos.18b.haus
  rules:
    - backendRefs:
        - name: thanos-query-frontend
          port: 10902
